--- a/.tmp/style/style.css
+++ b/.tmp/style/style.css
@@ -1704,46 +1704,9 @@ section, body > header, .header-main header, body > footer {
   -ms-flex-direction: row-reverse;
   flex-direction: row-reverse; }
 
-.navbar {
-  padding-right: 1.6875rem;
-  padding-left: 1.6875rem;
-  box-sizing: border-box;
-  -webkit-box-flex: 0;
-  -webkit-flex-grow: 0;
-  -moz-flex-grow: 0;
-  -ms-flex-positive: 0;
-  flex-grow: 0;
-  -webkit-flex-shrink: 0;
-  -moz-flex-shrink: 0;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-  -webkit-flex-basis: 100%;
-  -moz-flex-basis: 100%;
-  -ms-flex-preferred-size: 100%;
-  flex-basis: 100%;
-  max-width: 100%; }
-
 @media only screen and (min-width: 768px) {
   section, body > header, .header-main header, body > footer {
-    width: 100%; }
-  .content-left, .content-right {
-    padding-right: 1.6875rem;
-    padding-left: 1.6875rem;
-    box-sizing: border-box;
-    -webkit-box-flex: 0;
-    -webkit-flex-grow: 0;
-    -moz-flex-grow: 0;
-    -ms-flex-positive: 0;
-    flex-grow: 0;
-    -webkit-flex-shrink: 0;
-    -moz-flex-shrink: 0;
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    -webkit-flex-basis: 50%;
-    -moz-flex-basis: 50%;
-    -ms-flex-preferred-size: 50%;
-    flex-basis: 50%;
-    max-width: 50%; } }
+    width: 100%; } }
 
 @media only screen and (min-width: 992px) {
   section, body > header, .header-main header, body > footer {
@@ -1756,11 +1719,6 @@ section, body > header, .header-main header, body > footer {
 @media only screen and (min-width: 1400px) {
   section, body > header, .header-main header, body > footer {
     width: 1376px; } }
-
-@media (max-width: 767px) {
-  .navbar {
-    padding-right: 0;
-    padding-left: 0; } }
 
 .icon:before, [class^="icon"]:before {
   display: inline-block;
@@ -1790,20 +1748,20 @@ Copyright (c) 2015 Daniel Eden
 body {
   -webkit-backface-visibility: hidden; }
 
-.animated, .content-right h1 {
+.animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both; }
-  .animated.infinite, .content-right h1.infinite {
+  .animated.infinite {
     animation-iteration-count: infinite; }
-  .animated.hinge, .content-right h1.hinge {
+  .animated.hinge {
     -webkit-animation-duration: 2s;
     animation-duration: 2s; }
-  .animated.bounceIn, .content-right h1.bounceIn, .animated.bounceOut, .content-right h1.bounceOut {
+  .animated.bounceIn, .animated.bounceOut {
     -webkit-animation-duration: 0.75s;
     animation-duration: 0.75s; }
-  .animated.flipOutX, .content-right h1.flipOutX, .animated.flipOutY, .content-right h1.flipOutY {
+  .animated.flipOutX, .animated.flipOutY {
     -webkit-animation-duration: 0.75s;
     animation-duration: 0.75s; }
 
@@ -1841,8 +1799,8 @@ body {
 
 @font-face {
   font-family: 'fontello';
-  src: url("../font/fontello.eot?83956120");
-  src: url("../font/fontello.eot?83956120#iefix") format("embedded-opentype"), url("../font/fontello.woff2?83956120") format("woff2"), url("../font/fontello.woff?83956120") format("woff"), url("../font/fontello.ttf?83956120") format("truetype"), url("../font/fontello.svg?83956120#fontello") format("svg");
+  src: url("../font/fontello.eot?86468372");
+  src: url("../font/fontello.eot?86468372#iefix") format("embedded-opentype"), url("../font/fontello.woff2?86468372") format("woff2"), url("../font/fontello.woff?86468372") format("woff"), url("../font/fontello.ttf?86468372") format("truetype"), url("../font/fontello.svg?86468372#fontello") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -1852,7 +1810,7 @@ body {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?83956120#fontello') format('svg');
+    src: url('../font/fontello.svg?86468372#fontello') format('svg');
   }
 }
 */
@@ -1937,71 +1895,6 @@ body, html {
   backface-visibility: hidden; }
 
 /* inject:componentImports */
-.content-left {
-  background: #F8F8F8;
-  padding: 1.6875rem;
-  margin-bottom: 1.6875rem; }
-  .content-left .color-vars-main, .content-left .color-vars-shades {
-    width: 45%;
-    display: inline-block;
-    margin: 0 0 3.375rem 0; }
-    .content-left .color-vars-main li, .content-left .color-vars-shades li {
-      list-style: none;
-      position: relative;
-      line-height: 3rem;
-      padding-left: 70px; }
-      .content-left .color-vars-main li:before, .content-left .color-vars-shades li:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%; }
-    .content-left .color-vars-main li:nth-of-type(1):before, .content-left .color-vars-shades li:nth-of-type(1):before {
-      background: #FCA504; }
-    .content-left .color-vars-main li:nth-of-type(2):before, .content-left .color-vars-shades li:nth-of-type(2):before {
-      background: #009DC9; }
-    .content-left .color-vars-main li:nth-of-type(3):before, .content-left .color-vars-shades li:nth-of-type(3):before {
-      background: #80007F; }
-    .content-left .color-vars-main li:nth-of-type(4):before, .content-left .color-vars-shades li:nth-of-type(4):before {
-      background: #FFD68B; }
-    .content-left .color-vars-main li:nth-of-type(5):before, .content-left .color-vars-shades li:nth-of-type(5):before {
-      background: #CF8600; }
-  .content-left .color-vars-shades li:nth-of-type(1):before {
-    background: #E6EAF0; }
-  .content-left .color-vars-shades li:nth-of-type(2):before {
-    background: #EEEEEE; }
-  .content-left .color-vars-shades li:nth-of-type(3):before {
-    background: #666666; }
-  .content-left .color-vars-shades li:nth-of-type(4):before {
-    background: #272729; }
-
-.header-main {
-  position: relative;
-  background: #272729;
-  padding: 0 0.84375rem;
-  margin-bottom: 1.6875rem; }
-  .header-main .logo-main {
-    position: absolute;
-    left: 50%;
-    top: 0.84375rem;
-    transform: translateX(-50%);
-    height: 50px; }
-    .header-main .logo-main * {
-      stroke: #FCA504;
-      fill: #272729; }
-
-.navbar a {
-  color: #fff;
-  display: inline-block;
-  margin-right: 3.375rem;
-  text-decoration: none;
-  line-height: 3.375rem; }
-
-@media (max-width: 1199px) {
-  .navbar {
-    visibility: hidden; } }
-
 /* endinjectComponent */
 
 /*# sourceMappingURL=style.css.map */
