--- a/_dev/components/SampleComponent/_SampleComponent.pug
+++ b/_dev/components/SampleComponent/_SampleComponent.pug
@@ -1,10 +1,10 @@
 
-//- NewComponent
+//- SampleComponent
 //- ============
 //- A basic sample component
 
 //- Includes
 
-mixin NewComponent()
+mixin SampleComponent()
     
-    .NewComponent
+    .SampleComponent
