--- a/_dev/html/index.pug
+++ b/_dev/html/index.pug
@@ -11,12 +11,12 @@ block pageVars
 	- var bodyClass = 'home'
 
 //- Includes
-include ../components/testcomponent/_testcomponent
+include ../components/SampleComponent/_SampleComponent
 
 //- Page content
 block content
 
-	main(role="main")#app
+	header(role="banner")#app
 
 	//- Under document content
 	include _includes/_under
