Added redux plus working list

--- a/.tmp/style/style.css
+++ b/.tmp/style/style.css
@@ -8,7 +8,7 @@ h2, .h2 {
 h3, .h3 {
   font-family: "Sanchez", sans-serif; }
 
-h4, .h4 {
+h4, .h4, .TextList h1 {
   font-family: "Sanchez", sans-serif; }
 
 h5, .h5 {
@@ -221,7 +221,7 @@ h2, .h2 {
 h3, .h3 {
   font-size: 1.5rem; }
 
-h4, .h4 {
+h4, .h4, .TextList h1 {
   font-size: 1.5rem; }
 
 h5, .h5 {
@@ -323,7 +323,7 @@ h2, .h2 {
 h3, .h3 {
   line-height: 1.6875rem; }
 
-h4, .h4 {
+h4, .h4, .TextList h1 {
   line-height: 1.6875rem; }
 
 h5, .h5 {
@@ -748,7 +748,7 @@ h3, .h3 {
   margin-bottom: 0.84375rem;
   padding-top: 1.6875rem; }
 
-h4, .h4, h5, .h5 {
+h4, .h4, .TextList h1, h5, .h5 {
   margin-bottom: 0.84375rem;
   padding-top: 0.84375rem; }
 
@@ -762,7 +762,7 @@ h4, .h4, h5, .h5 {
   body h3, body .h3 {
     font-size: 1.5rem;
     line-height: 1.6875rem; }
-  body h4, body .h4 {
+  body h4, body .h4, body .TextList h1, .TextList body h1 {
     font-size: 1.125rem;
     line-height: 1.6875rem; }
   body h5, body .h5 {
@@ -797,7 +797,7 @@ h4, .h4, h5, .h5 {
   body h3, body .h3 {
     font-size: 1.5rem;
     line-height: 1.6875rem; }
-  body h4, body .h4 {
+  body h4, body .h4, body .TextList h1, .TextList body h1 {
     font-size: 1.125rem;
     line-height: 1.6875rem; }
   body h5, body .h5 {
@@ -939,22 +939,22 @@ also have border and padding. This is done because some browsers don't render
 the padding. We explicitly set the box-model for select elements to border-box,
 so we can ignore the csslint warning.
 */
-.pure-form input[type="text"],
-.pure-form input[type="password"],
-.pure-form input[type="email"],
-.pure-form input[type="url"],
-.pure-form input[type="date"],
-.pure-form input[type="month"],
-.pure-form input[type="time"],
-.pure-form input[type="datetime"],
-.pure-form input[type="datetime-local"],
-.pure-form input[type="week"],
-.pure-form input[type="number"],
-.pure-form input[type="search"],
-.pure-form input[type="tel"],
-.pure-form input[type="color"],
-.pure-form select,
-.pure-form textarea {
+.pure-form input[type="text"], .TextList form input[type="text"],
+.pure-form input[type="password"], .TextList form input[type="password"],
+.pure-form input[type="email"], .TextList form input[type="email"],
+.pure-form input[type="url"], .TextList form input[type="url"],
+.pure-form input[type="date"], .TextList form input[type="date"],
+.pure-form input[type="month"], .TextList form input[type="month"],
+.pure-form input[type="time"], .TextList form input[type="time"],
+.pure-form input[type="datetime"], .TextList form input[type="datetime"],
+.pure-form input[type="datetime-local"], .TextList form input[type="datetime-local"],
+.pure-form input[type="week"], .TextList form input[type="week"],
+.pure-form input[type="number"], .TextList form input[type="number"],
+.pure-form input[type="search"], .TextList form input[type="search"],
+.pure-form input[type="tel"], .TextList form input[type="tel"],
+.pure-form input[type="color"], .TextList form input[type="color"],
+.pure-form select, .TextList form select,
+.pure-form textarea, .TextList form textarea {
   padding: 0.5em 0.6em;
   display: inline-block;
   border: 1px solid #ccc;
@@ -967,7 +967,7 @@ so we can ignore the csslint warning.
 Need to separate out the :not() selector from the rest of the CSS 2.1 selectors
 since IE8 won't execute CSS that contains a CSS3 selector.
 */
-.pure-form input:not([type]) {
+.pure-form input:not([type]), .TextList form input:not([type]) {
   padding: 0.5em 0.6em;
   display: inline-block;
   border: 1px solid #ccc;
@@ -977,25 +977,25 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 
 /* Chrome (as of v.32/34 on OS X) needs additional room for color to display. */
 /* May be able to remove this tweak as color inputs become more standardized across browsers. */
-.pure-form input[type="color"] {
+.pure-form input[type="color"], .TextList form input[type="color"] {
   padding: 0.2em 0.5em; }
 
-.pure-form input[type="text"]:focus,
-.pure-form input[type="password"]:focus,
-.pure-form input[type="email"]:focus,
-.pure-form input[type="url"]:focus,
-.pure-form input[type="date"]:focus,
-.pure-form input[type="month"]:focus,
-.pure-form input[type="time"]:focus,
-.pure-form input[type="datetime"]:focus,
-.pure-form input[type="datetime-local"]:focus,
-.pure-form input[type="week"]:focus,
-.pure-form input[type="number"]:focus,
-.pure-form input[type="search"]:focus,
-.pure-form input[type="tel"]:focus,
-.pure-form input[type="color"]:focus,
-.pure-form select:focus,
-.pure-form textarea:focus {
+.pure-form input[type="text"]:focus, .TextList form input[type="text"]:focus,
+.pure-form input[type="password"]:focus, .TextList form input[type="password"]:focus,
+.pure-form input[type="email"]:focus, .TextList form input[type="email"]:focus,
+.pure-form input[type="url"]:focus, .TextList form input[type="url"]:focus,
+.pure-form input[type="date"]:focus, .TextList form input[type="date"]:focus,
+.pure-form input[type="month"]:focus, .TextList form input[type="month"]:focus,
+.pure-form input[type="time"]:focus, .TextList form input[type="time"]:focus,
+.pure-form input[type="datetime"]:focus, .TextList form input[type="datetime"]:focus,
+.pure-form input[type="datetime-local"]:focus, .TextList form input[type="datetime-local"]:focus,
+.pure-form input[type="week"]:focus, .TextList form input[type="week"]:focus,
+.pure-form input[type="number"]:focus, .TextList form input[type="number"]:focus,
+.pure-form input[type="search"]:focus, .TextList form input[type="search"]:focus,
+.pure-form input[type="tel"]:focus, .TextList form input[type="tel"]:focus,
+.pure-form input[type="color"]:focus, .TextList form input[type="color"]:focus,
+.pure-form select:focus, .TextList form select:focus,
+.pure-form textarea:focus, .TextList form textarea:focus {
   outline: 0;
   border-color: #129FEA; }
 
@@ -1003,37 +1003,37 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 Need to separate out the :not() selector from the rest of the CSS 2.1 selectors
 since IE8 won't execute CSS that contains a CSS3 selector.
 */
-.pure-form input:not([type]):focus {
+.pure-form input:not([type]):focus, .TextList form input:not([type]):focus {
   outline: 0;
   border-color: #129FEA; }
 
-.pure-form input[type="file"]:focus,
-.pure-form input[type="radio"]:focus,
-.pure-form input[type="checkbox"]:focus {
+.pure-form input[type="file"]:focus, .TextList form input[type="file"]:focus,
+.pure-form input[type="radio"]:focus, .TextList form input[type="radio"]:focus,
+.pure-form input[type="checkbox"]:focus, .TextList form input[type="checkbox"]:focus {
   outline: thin solid #129FEA;
   outline: 1px auto #129FEA; }
 
-.pure-form .pure-checkbox,
-.pure-form .pure-radio {
+.pure-form .pure-checkbox, .TextList form .pure-checkbox,
+.pure-form .pure-radio, .TextList form .pure-radio {
   margin: 0.5em 0;
   display: block; }
 
-.pure-form input[type="text"][disabled],
-.pure-form input[type="password"][disabled],
-.pure-form input[type="email"][disabled],
-.pure-form input[type="url"][disabled],
-.pure-form input[type="date"][disabled],
-.pure-form input[type="month"][disabled],
-.pure-form input[type="time"][disabled],
-.pure-form input[type="datetime"][disabled],
-.pure-form input[type="datetime-local"][disabled],
-.pure-form input[type="week"][disabled],
-.pure-form input[type="number"][disabled],
-.pure-form input[type="search"][disabled],
-.pure-form input[type="tel"][disabled],
-.pure-form input[type="color"][disabled],
-.pure-form select[disabled],
-.pure-form textarea[disabled] {
+.pure-form input[type="text"][disabled], .TextList form input[type="text"][disabled],
+.pure-form input[type="password"][disabled], .TextList form input[type="password"][disabled],
+.pure-form input[type="email"][disabled], .TextList form input[type="email"][disabled],
+.pure-form input[type="url"][disabled], .TextList form input[type="url"][disabled],
+.pure-form input[type="date"][disabled], .TextList form input[type="date"][disabled],
+.pure-form input[type="month"][disabled], .TextList form input[type="month"][disabled],
+.pure-form input[type="time"][disabled], .TextList form input[type="time"][disabled],
+.pure-form input[type="datetime"][disabled], .TextList form input[type="datetime"][disabled],
+.pure-form input[type="datetime-local"][disabled], .TextList form input[type="datetime-local"][disabled],
+.pure-form input[type="week"][disabled], .TextList form input[type="week"][disabled],
+.pure-form input[type="number"][disabled], .TextList form input[type="number"][disabled],
+.pure-form input[type="search"][disabled], .TextList form input[type="search"][disabled],
+.pure-form input[type="tel"][disabled], .TextList form input[type="tel"][disabled],
+.pure-form input[type="color"][disabled], .TextList form input[type="color"][disabled],
+.pure-form select[disabled], .TextList form select[disabled],
+.pure-form textarea[disabled], .TextList form textarea[disabled] {
   cursor: not-allowed;
   background-color: #eaeded;
   color: #cad2d3; }
@@ -1042,49 +1042,49 @@ since IE8 won't execute CSS that contains a CSS3 selector.
 Need to separate out the :not() selector from the rest of the CSS 2.1 selectors
 since IE8 won't execute CSS that contains a CSS3 selector.
 */
-.pure-form input:not([type])[disabled] {
+.pure-form input:not([type])[disabled], .TextList form input:not([type])[disabled] {
   cursor: not-allowed;
   background-color: #eaeded;
   color: #cad2d3; }
 
-.pure-form input[readonly],
-.pure-form select[readonly],
-.pure-form textarea[readonly] {
+.pure-form input[readonly], .TextList form input[readonly],
+.pure-form select[readonly], .TextList form select[readonly],
+.pure-form textarea[readonly], .TextList form textarea[readonly] {
   background-color: #eee;
   /* menu hover bg color */
   color: #777;
   /* menu text color */
   border-color: #ccc; }
 
-.pure-form input:focus:invalid,
-.pure-form textarea:focus:invalid,
-.pure-form select:focus:invalid {
+.pure-form input:focus:invalid, .TextList form input:focus:invalid,
+.pure-form textarea:focus:invalid, .TextList form textarea:focus:invalid,
+.pure-form select:focus:invalid, .TextList form select:focus:invalid {
   color: #b94a48;
   border-color: #e9322d; }
 
-.pure-form input[type="file"]:focus:invalid:focus,
-.pure-form input[type="radio"]:focus:invalid:focus,
-.pure-form input[type="checkbox"]:focus:invalid:focus {
+.pure-form input[type="file"]:focus:invalid:focus, .TextList form input[type="file"]:focus:invalid:focus,
+.pure-form input[type="radio"]:focus:invalid:focus, .TextList form input[type="radio"]:focus:invalid:focus,
+.pure-form input[type="checkbox"]:focus:invalid:focus, .TextList form input[type="checkbox"]:focus:invalid:focus {
   outline-color: #e9322d; }
 
-.pure-form select {
+.pure-form select, .TextList form select {
   /* Normalizes the height; padding is not sufficient. */
   height: 2.25em;
   border: 1px solid #ccc;
   background-color: white; }
 
-.pure-form select[multiple] {
+.pure-form select[multiple], .TextList form select[multiple] {
   height: auto; }
 
-.pure-form label {
+.pure-form label, .TextList form label {
   margin: 0.5em 0 0.2em; }
 
-.pure-form fieldset {
+.pure-form fieldset, .TextList form fieldset {
   margin: 0;
   padding: 0.35em 0 0.75em;
   border: 0; }
 
-.pure-form legend {
+.pure-form legend, .TextList form legend {
   display: block;
   width: 100%;
   padding: 0.3em 0;
@@ -1149,17 +1149,17 @@ since IE8 won't execute CSS that contains a CSS3 selector.
   margin: 1.5em 0 0 11em; }
 
 /* Rounded Inputs */
-.pure-form input.pure-input-rounded,
-.pure-form .pure-input-rounded {
+.pure-form input.pure-input-rounded, .TextList form input.pure-input-rounded,
+.pure-form .pure-input-rounded, .TextList form .pure-input-rounded {
   border-radius: 2em;
   padding: 0.5em 1em; }
 
 /* Grouped Inputs */
-.pure-form .pure-group fieldset {
+.pure-form .pure-group fieldset, .TextList form .pure-group fieldset {
   margin-bottom: 10px; }
 
-.pure-form .pure-group input,
-.pure-form .pure-group textarea {
+.pure-form .pure-group input, .TextList form .pure-group input,
+.pure-form .pure-group textarea, .TextList form .pure-group textarea {
   display: block;
   padding: 10px;
   margin: 0 0 -1px;
@@ -1167,52 +1167,52 @@ since IE8 won't execute CSS that contains a CSS3 selector.
   position: relative;
   top: -1px; }
 
-.pure-form .pure-group input:focus,
-.pure-form .pure-group textarea:focus {
+.pure-form .pure-group input:focus, .TextList form .pure-group input:focus,
+.pure-form .pure-group textarea:focus, .TextList form .pure-group textarea:focus {
   z-index: 3; }
 
-.pure-form .pure-group input:first-child,
-.pure-form .pure-group textarea:first-child {
+.pure-form .pure-group input:first-child, .TextList form .pure-group input:first-child,
+.pure-form .pure-group textarea:first-child, .TextList form .pure-group textarea:first-child {
   top: 1px;
   border-radius: 4px 4px 0 0;
   margin: 0; }
 
-.pure-form .pure-group input:first-child:last-child,
-.pure-form .pure-group textarea:first-child:last-child {
+.pure-form .pure-group input:first-child:last-child, .TextList form .pure-group input:first-child:last-child,
+.pure-form .pure-group textarea:first-child:last-child, .TextList form .pure-group textarea:first-child:last-child {
   top: 1px;
   border-radius: 4px;
   margin: 0; }
 
-.pure-form .pure-group input:last-child,
-.pure-form .pure-group textarea:last-child {
+.pure-form .pure-group input:last-child, .TextList form .pure-group input:last-child,
+.pure-form .pure-group textarea:last-child, .TextList form .pure-group textarea:last-child {
   top: -2px;
   border-radius: 0 0 4px 4px;
   margin: 0; }
 
-.pure-form .pure-group button {
+.pure-form .pure-group button, .TextList form .pure-group button {
   margin: 0.35em 0; }
 
-.pure-form .pure-input-1 {
+.pure-form .pure-input-1, .TextList form .pure-input-1 {
   width: 100%; }
 
-.pure-form .pure-input-3-4 {
+.pure-form .pure-input-3-4, .TextList form .pure-input-3-4 {
   width: 75%; }
 
-.pure-form .pure-input-2-3 {
+.pure-form .pure-input-2-3, .TextList form .pure-input-2-3 {
   width: 66%; }
 
-.pure-form .pure-input-1-2 {
+.pure-form .pure-input-1-2, .TextList form .pure-input-1-2 {
   width: 50%; }
 
-.pure-form .pure-input-1-3 {
+.pure-form .pure-input-1-3, .TextList form .pure-input-1-3 {
   width: 33%; }
 
-.pure-form .pure-input-1-4 {
+.pure-form .pure-input-1-4, .TextList form .pure-input-1-4 {
   width: 25%; }
 
 /* Inline help for forms */
 /* NOTE: pure-help-inline is deprecated. Use .pure-form-message-inline instead. */
-.pure-form .pure-help-inline,
+.pure-form .pure-help-inline, .TextList form .pure-help-inline,
 .pure-form-message-inline {
   display: inline-block;
   padding-left: 0.3em;
@@ -1227,24 +1227,24 @@ since IE8 won't execute CSS that contains a CSS3 selector.
   font-size: 0.875em; }
 
 @media only screen and (max-width: 480px) {
-  .pure-form button[type="submit"] {
+  .pure-form button[type="submit"], .TextList form button[type="submit"] {
     margin: 0.7em 0 0; }
-  .pure-form input:not([type]),
-  .pure-form input[type="text"],
-  .pure-form input[type="password"],
-  .pure-form input[type="email"],
-  .pure-form input[type="url"],
-  .pure-form input[type="date"],
-  .pure-form input[type="month"],
-  .pure-form input[type="time"],
-  .pure-form input[type="datetime"],
-  .pure-form input[type="datetime-local"],
-  .pure-form input[type="week"],
-  .pure-form input[type="number"],
-  .pure-form input[type="search"],
-  .pure-form input[type="tel"],
-  .pure-form input[type="color"],
-  .pure-form label {
+  .pure-form input:not([type]), .TextList form input:not([type]),
+  .pure-form input[type="text"], .TextList form input[type="text"],
+  .pure-form input[type="password"], .TextList form input[type="password"],
+  .pure-form input[type="email"], .TextList form input[type="email"],
+  .pure-form input[type="url"], .TextList form input[type="url"],
+  .pure-form input[type="date"], .TextList form input[type="date"],
+  .pure-form input[type="month"], .TextList form input[type="month"],
+  .pure-form input[type="time"], .TextList form input[type="time"],
+  .pure-form input[type="datetime"], .TextList form input[type="datetime"],
+  .pure-form input[type="datetime-local"], .TextList form input[type="datetime-local"],
+  .pure-form input[type="week"], .TextList form input[type="week"],
+  .pure-form input[type="number"], .TextList form input[type="number"],
+  .pure-form input[type="search"], .TextList form input[type="search"],
+  .pure-form input[type="tel"], .TextList form input[type="tel"],
+  .pure-form input[type="color"], .TextList form input[type="color"],
+  .pure-form label, .TextList form label {
     margin-bottom: 0.3em;
     display: block; }
   .pure-group input:not([type]),
@@ -1271,7 +1271,7 @@ since IE8 won't execute CSS that contains a CSS3 selector.
   .pure-form-aligned .pure-controls {
     margin: 1.5em 0 0 0; }
   /* NOTE: pure-help-inline is deprecated. Use .pure-form-message-inline instead. */
-  .pure-form .pure-help-inline,
+  .pure-form .pure-help-inline, .TextList form .pure-help-inline,
   .pure-form-message-inline,
   .pure-form-message {
     display: block;
@@ -1799,8 +1799,8 @@ body {
 
 @font-face {
   font-family: 'fontello';
-  src: url("../font/fontello.eot?24642355");
-  src: url("../font/fontello.eot?24642355#iefix") format("embedded-opentype"), url("../font/fontello.woff2?24642355") format("woff2"), url("../font/fontello.woff?24642355") format("woff"), url("../font/fontello.ttf?24642355") format("truetype"), url("../font/fontello.svg?24642355#fontello") format("svg");
+  src: url("../font/fontello.eot?36080388");
+  src: url("../font/fontello.eot?36080388#iefix") format("embedded-opentype"), url("../font/fontello.woff2?36080388") format("woff2"), url("../font/fontello.woff?36080388") format("woff"), url("../font/fontello.ttf?36080388") format("truetype"), url("../font/fontello.svg?36080388#fontello") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -1810,7 +1810,7 @@ body {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?24642355#fontello') format('svg');
+    src: url('../font/fontello.svg?36080388#fontello') format('svg');
   }
 }
 */
@@ -1886,7 +1886,7 @@ body {
 
 /* '' */
 body, html {
-  background: #fff;
+  background: #666666;
   overflow-x: hidden; }
 
 * {
@@ -1895,15 +1895,23 @@ body, html {
   backface-visibility: hidden; }
 
 /* inject:componentImports */
-.SampleComponent {
+.TextList {
   position: relative;
   box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.2);
-  text-align: center;
+  margin: 1.6875rem auto;
   background: #eee;
-  border-bottom: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 3.375rem;
-  margin: 3.375rem; }
+  border: 1px solid #ddd;
+  padding: 1.6875rem;
+  width: 450px; }
+  .TextList h1 {
+    padding-bottom: 0.84375rem;
+    border-bottom: 1px solid #ccc; }
+  .TextList form input[type="text"] {
+    float: left;
+    padding: 0.84375rem; }
+  .TextList form button {
+    color: #fff;
+    margin-left: 1.6875rem; }
 
 /* endinjectComponent */
 
