--- a/_dev/components/ListOfThings/_ListOfThings.pug
+++ b/_dev/components/ListOfThings/_ListOfThings.pug
@@ -1,10 +1,10 @@
 
-//- SampleComponent
+//- ListOfThings
 //- ============
 //- A basic sample component
 
 //- Includes
 
-mixin SampleComponent()
+mixin ListOfThings()
     
-    .SampleComponent
+    .ListOfThings
