--- a/_dev/html/index.pug
+++ b/_dev/html/index.pug
@@ -11,12 +11,12 @@ block pageVars
 	- var bodyClass = 'home'
 
 //- Includes
-include ../components/SampleComponent/_SampleComponent
+//- include ../components/SampleComponent/_SampleComponent
 
 //- Page content
 block content
 
-	header(role="banner")#app
+	#app
 
 	//- Under document content
 	include _includes/_under
